--- a/index.html
+++ b/index.html
@@ -5,198 +5,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2nd-Exam</title>
+    <title>2nd Exam</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
+
 
 </head>
 
 <body>
     <main>
 
-        <!-- latest courses -->
-        <section class="container">
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-1.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Neymar Jr.</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
+        <section class="top-part">
+            <div class="top-left">
+                <!-- Top area image -->
+                <div class="title-text">
+                    <h1>Conmebol
+                        Copa America
+                        2021</h1>
                 </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-2.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Lionel Messi</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-3.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Cristiano Ronaldo</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
-
-
-
-                        </div>
-                    </div>
+                <div class="video-link">
+                    <a href=""><span>Watch Live </span>
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
             </div>
-            <!-- latest courses -->
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-4.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Paulo Dybala</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-5.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Mesut Özil</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-6.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Mauro Icardi</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
+            <!-- banner image -->
+            <div class="top-right">
+                <img src="images/banner.png" alt="">
             </div>
-
-            <!-- latest courses -->
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-7.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Di María</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-8.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Kylian Mbappé</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-9.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Mohamed Salah</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-            </div>
-
-            <!-- latest courses -->
-
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-10.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Harry Kane</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-11.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Kevin De Bruyne</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-                <div class="course">
-                    <div class="course-banner">
-                        <img src="images/players/player-12.png" alt="">
-                    </div>
-                    <div class="course-detail">
-                        <h3 class="course-title">Philippe Coutinho</h3>
-                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
-                            dolore,
-                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-
-                    </div>
-                </div>
-            </div>
-            <!-- footer  -->
-
-
-
-
         </section>
+        <!-- players images and info -->
+        <article class="players-info">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Neymar Jr</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3>Lionel Messi</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3>Paulo Dybala</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3>Mesut Ozil </h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3>Mauro Icardi </h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h3>Di Maria</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h3>Kylian Mbappé</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h3>Mohamed Salah</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h3>Harry Kane</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h3>Kevin De Bruyne</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h3>Philippe Coutinho</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a
+                        forward for..</p>
+                </div>
+            </div>
+        </article>
+        <!-- main section ses -->
+        <!-- 3ed pera -->
     </main>
+
 </body>
+
 
 </html>
