--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
     <title>2nd Exam</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
-
-
+    <script src="https://kit.fontawesome.com/658abd9d4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <main>
 
-        <section class="top-part">
-            <div class="top-left">
-                <!-- Top area image -->
-                <div class="title-text">
-                    <h1>Conmebol
-                        Copa America
-                        2021</h1>
+        <section>
+            <div class="top-part">
+                <div class="top-left">
+                    <!-- Top area image -->
+                    <div class="title-text">
+                        <h1>Conmebol
+                            Copa America
+                            2021</h1>
+                    </div>
+                    <div class="button-link">
+                        <a href=""><span>Watch Live </span>
+                            <i class="button-work"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="video-link">
-                    <a href=""><span>Watch Live </span>
-                        <i class="fas fa-arrow-right"></i>
-                    </a>
+                <!-- banner -->
+                <div class="top-right">
+                    <img src="images/banner.png" alt="">
                 </div>
-            </div>
-            <!-- banner image -->
-            <div class="top-right">
-                <img src="images/banner.png" alt="">
             </div>
         </section>
         <!-- players images and info -->
@@ -40,92 +41,95 @@
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
                     <h3>Neymar Jr</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-2.png" alt="">
                     <h3>Lionel Messi</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-3.png" alt="">
                     <h3>Cristiano Ronaldo</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-4.png" alt="">
                     <h3>Paulo Dybala</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-5.png" alt="">
                     <h3>Mesut Ozil </h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-6.png" alt="">
                     <h3>Mauro Icardi </h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-7.png" alt="">
                     <h3>Di Maria</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-8.png" alt="">
                     <h3>Kylian Mbappé</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-9.png" alt="">
                     <h3>Mohamed Salah</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-10.png" alt="">
                     <h3>Harry Kane</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-11.png" alt="">
                     <h3>Kevin De Bruyne</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
                 <div class="player">
                     <img src="images/players/player-12.png" alt="">
                     <h3>Philippe Coutinho</h3>
-                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
-                        as a
-                        forward for..</p>
+                    <p>Lionel Messi became a free agent on July 1 after his contract with FC Barcelona expired,
+                        club is still looking to sign him on a two-year</p>
                 </div>
             </div>
         </article>
         <!-- main section ses -->
         <!-- 3ed pera -->
     </main>
+    <footer>
+        <div class="football-logo">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="social-sites">
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""> <i class="fab fa-twitter"></i></a>
+            <a href=""> <i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
+            <a href=""><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>Copyright © 2022 Football</p>
+    </footer>
+
+
 
 </body>
 
