--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             2021</h1>
                     </div>
                     <div class="button-link">
-                        <a href=""><span>Watch Live </span>
+                        <a href="https://www.goal.com/en-in/live-scores"><span>Watch Live </span>
                             <i class="button-work"></i>
                         </a>
                     </div>
@@ -113,6 +113,38 @@
             </div>
         </article>
         <!-- main section ses -->
+
+
+        <!-- high light -->
+        <div class="mid-font">
+            <div class="item-font">
+                <h1>Highlight</h1>
+            </div>
+        </div>
+        <section>
+            <div class="top-part">
+                <div class="top-left">
+                    <!-- Top area image -->
+                    <div class="title-text">
+                        <h1>Top News About football</h1>
+
+                    </div>
+                    <div class="button-link">
+                        <a href="https://hoofoot.com/"><span>Watch Highlight </span>
+                            <i class="button-work"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- banner -->
+                <div class="top-right">
+                    <img src="images/match.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- high light ses -->
+
+
         <!-- 3ed pera -->
     </main>
     <footer>
