--- a/index.html
+++ b/index.html
@@ -111,42 +111,42 @@
                         club is still looking to sign him on a two-year</p>
                 </div>
             </div>
-        </article>
-        <!-- main section ses -->
+        </article><br><br>
+        <!-- 2nd section -->
 
-
-        <!-- high light -->
-        <div class="mid-font">
-            <div class="item-font">
-                <h1>Highlight</h1>
-            </div>
-        </div>
         <section>
             <div class="top-part">
                 <div class="top-left">
-                    <!-- Top area image -->
                     <div class="title-text">
                         <h1>Top News About football</h1>
 
                     </div>
                     <div class="button-link">
-                        <a href="https://hoofoot.com/"><span>Watch Highlight </span>
+                        <a href="https://hoofoot.com/"><span>Watch </span>
                             <i class="button-work"></i>
                         </a>
                     </div>
                 </div>
-                <!-- banner -->
+
                 <div class="top-right">
                     <img src="images/match.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- bonac -->
 
-        <!-- high light ses -->
-
-
-        <!-- 3ed pera -->
+        <div class="mid-font">
+            <div class="item-font">
+                <h1>Highlight</h1>
+            </div>
+        </div>
+        <div class="warning">
+            <img src="images/highlight.jpg" alt="An intimidating leopard.">
+            <p>Win Celebration Copa America </p>
+        </div>
+        <!-- bonac -->
     </main>
+    <!-- footer -->
     <footer>
         <div class="football-logo">
             <img src="images/Logo.png" alt="">
@@ -161,7 +161,7 @@
         <p>Copyright © 2022 Football</p>
     </footer>
 
-
+    <!-- fooer end -->
 
 </body>
 
